Update and rename README.md to README.adoc

--- a/README.adoc
+++ b/README.adoc
@@ -1,21 +1,9 @@
 user_servervars2
 ================
-
-
 Utilisation des variables serveurs dans une optique fédération d'identités
 
 Beaucoup d'idées sont reprises de [user_servervars de Jean-Jacques PUIG](http://apps.owncloud.com/content/show.php/user_servervars?content=158863)
 
-Test unitaires (pour mémoire)
-
-```
-set PHPUNIT=c:\servers\xampp\php\phpunit
-%PHPUNIT% --bootstrap tests\bootstrap.php apps\user_servervars2\tests
-```
-
-```
-set XDEBUG_CONFIG=sublime.xdebug
-```
 
 
 Principes de développement:
@@ -23,5 +11,19 @@ Principes de développement:
 
 server -> \OCP\IServerContainer
 
+= Annexes
+Test unitaires (pour mémoire)
+
+[source,php]
+----
+set PHPUNIT=c:\servers\xampp\php\phpunit
+%PHPUNIT% --bootstrap tests\bootstrap.php apps\user_servervars2\tests
+----
+
+[source,php]
+----
+set XDEBUG_CONFIG=sublime.xdebug
+[source,php]
+----
 
 
