Mise à jour du lien de documentation

--- a/README.adoc
+++ b/README.adoc
@@ -3,25 +3,7 @@ Utilisation des variables serveurs dans une optique fédération d'identités
 
 Beaucoup d'idées sont reprises de http://apps.owncloud.com/content/show.php/user_servervars?content=158863[user_servervars de Jean-Jacques PUIG]
 
-WARNING: état instable !
 
-WARNING: work in progress
-
-== Principes de développement:
-* N'utiliser que les interface PUBLIQUES de owncore 7
-
-= Annexes
-Test unitaires (pour mémoire)
-
-[source,dos]
-----
-set PHPUNIT=c:\servers\xampp\php\phpunit
-%PHPUNIT% --bootstrap tests\bootstrap.php apps\user_servervars2\tests
-----
-
-[source,dos]
-----
-set XDEBUG_CONFIG=sublime.xdebug
-----
-
+Documentation::
+Voir  le document doc/doc.adoc
 
